--- a/src/app/components/themes/widgets/home-banner/home-banner.component.html
+++ b/src/app/components/themes/widgets/home-banner/home-banner.component.html
@@ -40,9 +40,9 @@
     </div>
   </div>
 </div> -->
-<div class="container">
-  <div class="row">
-  <div class="col-md-2">
+<div class="">
+  <!-- <div class="row"> -->
+  <!-- <div class="col-md-2">
       <ol class="bg px-3 grid gap-3  py-2 bg">
         
         <li> <b> Bathroom Safety</b></li> <br>
@@ -57,10 +57,10 @@
         <li> <b> Medicaid Appoved</b></li>
       
       </ol>
-  </div>
-  <div class="col-md-10">
-    <div class="image-container">
-      <img class="container-fluid img" src="assets/images/pictures/heroPic.jpg" alt="Description of the image">
+  </div> -->
+  <div class="col-md-12">
+    <div class="container">
+      <img  class="container-fluid img" src="assets/images/pictures/heroPic.jpg" alt="Description of the image">
       <h1 class="text-overlay text-black">
         <p>Sale Series</p>
         Up to 10% off <br> Voucher
@@ -69,7 +69,7 @@
     </div>
   </div>
   </div>
-  </div>
+
 
 
   <!--  cards start -->
@@ -81,7 +81,7 @@
       <img  class="img-fluid p-3 mt-5" src="assets/images/pictures/Bin.jpg"  alt="">
       <button class=" ms-2 rounded mt-2 bg-danger px-2 position-absolute top-0 start-0">-30%</button>
 <img class="position-absolute top-0 end-0" src="assets/images/pictures/Heart.png" alt="">
-<img class="position-absolute top-0 end-0 mt-5 " src="assets/images/pictures/Eye.png" alt="">
+<!-- <img class="position-absolute top-0 end-0 mt-5 " src="assets/images/pictures/Eye.png" alt=""> -->
     </div>
     <h4 class="my-2">Trah Can</h4>
     <h4 class="my-2">0.00$</h4>
@@ -97,7 +97,7 @@
     <img class="img-fluid p-4" src="assets/images/pictures/chair.png" alt="">
     <button class=" ms-2 rounded mt-2 bg-danger px-2 position-absolute top-0 start-0">-30%</button>
 <img class="position-absolute top-0 end-0" src="assets/images/pictures/Heart.png" alt="">
-<img class="position-absolute top-0 end-0 mt-5 " src="assets/images/pictures/Eye.png" alt="">
+<!-- <img class="position-absolute top-0 end-0 mt-5 " src="assets/images/pictures/Eye.png" alt=""> -->
   </div>
   <h4 class="my-2">Stool</h4>
   <h4 class="my-2">0.00$</h4>
@@ -112,7 +112,7 @@
     <img class="img-fluid p-4 mt-5" src="assets/images/pictures/sofa.png"  alt="">
     <button class=" ms-2 rounded mt-2 bg-danger px-2 position-absolute top-0 start-0">-30%</button>
 <img class="position-absolute top-0 end-0" src="assets/images/pictures/Heart.png" alt="">
-<img class="position-absolute top-0 end-0 mt-5 " src="assets/images/pictures/Eye.png" alt="">
+<!-- <img class="position-absolute top-0 end-0 mt-5 " src="assets/images/pictures/Eye.png" alt=""> -->
   </div>
   <h4 class="my-2">Crib</h4>
   <h4 class="my-2">0.00$</h4>
@@ -127,7 +127,7 @@
       <img  class="img-fluid p-4 mt-5" src="assets/images/pictures/Screw.png"  alt="">
       <button class=" ms-2 rounded mt-2 bg-danger px-2 position-absolute top-0 start-0">-30%</button>
 <img class="position-absolute top-0 end-0" src="assets/images/pictures/Heart.png" alt="">
-<img class="position-absolute top-0 end-0 mt-5 " src="assets/images/pictures/Eye.png" alt="">
+<!-- <img class="position-absolute top-0 end-0 mt-5 " src="assets/images/pictures/Eye.png" alt=""> -->
     </div>
     <h4 class="my-2">Appliances</h4>
     <h4 class="my-2">0.00$</h4>
@@ -142,7 +142,7 @@
         <img class="img-fluid p-4 mt-4" src="assets/images/pictures/Ultrasound.png"  alt="">
         <button class=" ms-2 rounded mt-2 bg-danger px-2 position-absolute top-0 start-0">-30%</button>
   <img class="position-absolute top-0 end-0" src="assets/images/pictures/Heart.png" alt="">
-  <img class="position-absolute top-0 end-0 mt-5 " src="assets/images/pictures/Eye.png" alt="">
+  <!-- <img class="position-absolute top-0 end-0 mt-5 " src="assets/images/pictures/Eye.png" alt=""> -->
       </div>
       <h4 class="my-2">Electrical Equipment</h4>
       <h4 class="my-2">0.00$</h4>
