--- a/src/app/components/themes/widgets/home-banner/home-banner.component.scss
+++ b/src/app/components/themes/widgets/home-banner/home-banner.component.scss
@@ -1,13 +1,13 @@
-.image-container {
-    position: relative;
-    text-align: center;
-    max-width: 100%;
-  }
+// .image-container {
+//     position: relative;
+//     text-align: center;
+//     max-width: 100%;
+//   }
 
 
 
   .text-overlay {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 15%;
     transform: translate(-50%, -50%);
